# parallel-tar

./: .gitignore  CLA.md  COMMERCIAL.md  Cargo.toml  LICENSE  README.md
.github/scripts/: package_release.py
.github/workflows/: release-build.yml
scripts/: random_tree.nu
src/: indexer.rs  lib.rs  main.rs  viewer.rs
src/archive/: error.rs  fs.rs  mod.rs  mutex.rs  tar.rs
src/files/: mod.rs  path.rs  tree.rs
src/index/: crypto.rs  directory_tree.rs  display.rs  error.rs  fs.rs  mod.rs  serialize.rs  tree.rs
