[package]
name = "parallel-tar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.5"
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["kv", "serde", "std"] }
md5 = "0.8.0"
rayon = "1.11.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tar = "0.4.40"
walkdir = "2.4.0"

[lib]
name = "ptar_lib"
path = "src/lib.rs"

[[bin]]
name = "parallel-tar"
path = "src/main.rs"

[[bin]]
name = "parallel-idx"
path = "src/indexer.rs"

[[bin]]
name = "view-idx"
path = "src/viewer.rs"
